--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<head>
+<link rel="stylesheet" href="style.css">
+<script src = "index.js"></script>
+</head>
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p onclick="chicken()">I'm hosted with GitHub Pages.</p>
 </body>
 </html>
