--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p onclick="chicken()">I'm hosted with GitHub Pages.</p>
+<p onclick="chicken()" class = "testparagraph">I'm hosted with GitHub Pages.</p>
 </body>
 </html>
