--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<title>A Simple Website | Home</title>
 <link rel="stylesheet" href="style.css">
 <script src = "index.js"></script>
 </head>
