--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1 onclick="chicken()">Hello World</h1>
 <p onclick="chicken()" class = "testparagraph">I'm hosted with GitHub Pages.</p>
 </body>
 </html>
