--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="navbar">
-  <a href="#" class="active">Home</a>
+  <a href="home/index.html" class="active">Home</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
