--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </div>
 
 <div class="navbar">
-  <a href="home/index.html" class="active">Home</a>
-  <a href="#">Link</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="style.css">Link</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
 </div>
