--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="navbar">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html" class="active" onclick="chicken()">Home</a>
   <a href="style.css">Link</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
